Fixes Fun div extra top spacing

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ div#fun {
 	margin: 0 auto;
 	left: 0;
 	right: 0;
-	top: 627%;
+	top: 617%;
 	background: url('http://placehold.it/800x400/2b82d9/ffffff/&text=Fun');
 	position: absolute;
 }
